www/css/app.css
/* app css stylesheet */

.menu {
    list-style: none;
    border-bottom: 0.1em solid black;
    margin-bottom: 2em;
    padding: 0 0 0.5em;
}

.menu:before {
    content: "[";
}

.menu:after {
    content: "]";
}

.menu > li {
    display: inline;
}

.menu > li:before {
    content: "|";
    padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
    content: "";
    padding: 0;
}
.savePasswordText{
    font-size: 1.2em;
}
.list_overflow{
    height:250px;
    width:90%;
    text-align: center;
    overflow:scroll;
}

.list_overflow_y{
    height:300px;
    text-align: center;
    overflow-y:scroll;
}

.list_overflow_y_100{
    height:100%;
    text-align: center;
    overflow-y:scroll;
}

.float-right{
    float:right;
}

.float-left{
    float:left;
}

.float-comment{
    float:right;
    margin-right: 20%;
}
.heightPercent{
    height:100%;
}
.widthPercent{
    width: 100%;
}
.width70Percent{
    width:70%;
}
.width50Percent{
    width:50%;
}
.width40Percent{
    width:40%;
}
.width30Percent{
    width:33.33%;
}
.widthSettingsLabels {
    min-width: 130px;
}
.widthSettingsTabelLabel {
    width: 130px;
}
.width25Percent{
    width:25%;
}
.height80Percent{
    height: 90%;
}
.height80Percent{
    height: 80%;
}
.height70Percent{
    height:70%;
}
.height75Percent{
    height:75%;
}
.height60Percent{
    height: 60%;
}
.height20Percent{
    height: 20%;
}
.height10Percent{
    height: 10%;
}
.calendarWrapper{
    height:100%;
}
.calendarHeight{
    height: 100%;
}

#doctorCalendar{
    max-height:100%;
    overflow-y:scroll; 
}
.savePassword{
    width:10%;
    height:10%;
}
.shortcutButtons{
    display: block;
    text-align: center;
    width: 100%;
    height: 100%;
    margin-bottom: 50px;
}

.shortcutButton{
    height: 100px;
    width: 30%;
}
.languageButton{
    height: 100px;
    width: 33.33%;
}
.languages{
    margin-bottom: 10px;
}
.dateAndCalendar{
    margin:10px 5px 30px 5px;
}

.colorMarking{
    padding-top: 10px;
    padding-right: -10px;
}

.colorWrapper{
    width: 15%;
    height: 100%;
}

.reservationTitle{
    text-align: left;
    font-size:0.6em;
    font-weight: bold;
}

.reservationHour{
    font-size: 0.7em;
}

.reservationComment{
    font-size: 0.8em;
}

.detailTitle{
    font-weight: bold;
    font-size: 1.3em;
}

.detailInfo{
    width: 60%;
    font-size: 1.3em;
    display: table-cell;
}

@media screen and (min-width: 768px) {
    .detailTitle{
        font-weight: bold;
        font-size: 1.8em;
        width: 40%;
        display: table-cell;
    }

    .detailInfo{
        width: 60%;
        font-size: 1.8em;
        display: table-cell;
    }
}

.detailTableRow{
    display: table-row;
}

.detailTable{
    display: table;
}

.todayWrapper{
    text-align: center;
    float:right;
}
.cellcontent{
    font-size:18px;
    overflow:hidden;
}
.settingsCellcontent h1{
    font-size: 1.4em;
}
.settingsCellcontentDetail{
    text-align: center;
    font-size: 1.4em;
}
.tableLabel{
    font-size: 1.1em;
    padding-top: 10px;
}
.tablePlaceHolder{
    padding: 9px 14px;
    height:50px;
    width: 100%;
    max-width: 100px;
    min-width:10px;
}
table td {
    border-top: none;
}

.clearboth{
    clear:both;
}
.filterText{
    padding: 5px;
    color: black;
    font-size: 1.3em;
}
.filterTitle{
    font-size: 1.5em;
}
/*http://stackoverflow.com/questions/15305914/bootstrap-buttons-get-stuck-down-on-mobile-devices*/
.mobileHoverFix:hover,
.mobileHoverFix.hover{
    background-position: 0 0px;
}

@-webkit-keyframes spinning
{
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(360deg);}
}

.has-spinner .glyphicon-refresh {
    -webkit-animation: spinning 1s linear infinite;
    animation: spinning 1s linear infinite;
}
.dateAppointmentsView{
    padding-top:0px;
    display: inline-block;
    margin-bottom:10px;
}

.dateAppointmentsView h1{
    margin: 0px;
    font-size:1.8em;
}

.spinnerApointmentsCalendar{
    float: left;
    margin: 10px 10px;
}

#weekendBtn{
    font-size: 18px;
}
#todayBtn{
    font-size: 18px;
}

.view-animate-next.ng-enter, .view-animate-next.ng-leave, .view-animate-prev.ng-enter, .view-animate-prev.ng-leave {
    -webkit-transition-duration: .2s;
    transition-duration: .2s;

    display:block;
    width:100%;

    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
}

.view-animate-next.ng-enter {
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
}
.view-animate-next.ng-enter.ng-enter-active, .view-animate-prev.ng-enter.ng-enter-active {
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}
.view-animate-next.ng-leave.ng-leave-active {
    -webkit-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
}

.view-animate-prev.ng-enter {
    -webkit-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
}
.view-animate-prev.ng-leave.ng-leave-active {
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
}

.title{
    position: absolute;
    width: 50%;
    left:25%;
    text-align: center;
    font-size:25px;
    padding-top: 15px;
    padding-right: 0.5%;
    padding-bottom:10px;
}
.nextAndPrevCalendar{
    display: inline-block;
}

ul{
    margin: 0;
    padding: 0;
    list-style-type: none;
}
ul li{
    display: inline;
}

.invisible{
    display: none;
}

.icasaLogo{
    width: 80px;
    height: auto;
    position: absolute;
    right: 10px;
    top: 20px;
}

.AppointmentsList {
    -webkit-overflow-scrolling: touch;
    -webkit-transform: translate3d(0, 0, 0);
}

.AppointmentsListFill {
    position: absolute;
    top: 150px;
    bottom: 50px;
}

.btn-appointments-filter{
    height: 50px;
    position: absolute;
    right: 130px;
    top: 0;
}

.btn-appointments-filter .glyphicon-filter{
    font-size: 20px;
    color: black;   
}

@media screen and (max-width: 400px) {// Smartphones in portrait mode
    .dateAppointmentsViewScaled{
        width: 100px;
    }
    #todayBtn{
        font-size: 12px;
    }
    #weekendBtn{
        font-size: 12px;
    }
}

@-webkit-keyframes slideInRight {
    from {-webkit-transform: translate3d(100%,0,0); }
    to {-webkit-transform: translate3d(0,0,0); }
}

@-webkit-keyframes slideInLeft {
    from {-webkit-transform: translate3d(-100%,0,0); }
    to {-webkit-transform: translate3d(0,0,0); }
}

@-webkit-keyframes slideOutLeft {
    to { -webkit-transform: translate3d(-100%,0,0); }
}

@-webkit-keyframes slideOutRight {
    to { -webkit-transform: translate3d(100%,0,0); }
}

.page{
	bottom:0; 
	position:absolute; 
	top:0;  
	width:100%; 
}

.page.ng-enter { 
    z-index: 8888; 
}

.page.ng-leave { 
    z-index: 9999; 
}

.left-to-right.ng-enter{
    -webkit-animation: slideInLeft 0.5s both ease-in; 
}

.left-to-right.ng-leave{
    -webkit-animation: slideOutRight 0.5s both ease-in; 
    /*-webkit-animation: slideOutLeft 0.5s both ease-in;*/ 
}

.right-to-left.ng-enter{
    -webkit-animation: slideInRight 0.5s both ease-in; 
}

.right-to-left.ng-leave{
    -webkit-animation: slideOutLeft 0.5s both ease-in;
    /*-webkit-animation: slideOutRight 0.5s both ease-in;*/ 
}

@media screen and (max-width: 768px) {
    .title{
        font-size: 20px;
    }
    .icasaLogo{
        width: 70px;
        top: 22px;
    }
    ul{
        width:100%;
    }
    ul li a{
        width: 30%;
    }
}
@media screen and (min-width: 768px) {
    ul{
        width:43%;
    }
    ul li{
        width: 33%;
    }
    ul li a{
        font-size: 15px;
        width: 100%;
    }
}

